--- a/backend-node/package.json
+++ b/backend-node/package.json
@@ -6,12 +6,13 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon --inspect=0.0.0.0:9000 -L src/server.js",
-    "test": "jest"
+    "test": "jest --maxWorkers=1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "cors": "^2.8.5",
     "jest": "^27.4.3",
     "mongoose": "^6.0.6",
     "nodemon": "^2.0.12"
