--- a/frontend-react/package.json
+++ b/frontend-react/package.json
@@ -38,5 +38,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react": "^17.0.37",
+    "reactjs-popup": "^2.0.5"
   }
 }
