--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "petcalc",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "app/server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon --inspect=0.0.0.0:9000 -L server.js",
+    "start": "node app/server.js",
+    "dev": "nodemon --inspect=0.0.0.0:9000 -L app/server.js",
     "test": "jest --maxWorkers=1",
     "heroku-postbuild": "cd client && npm install && npm run build"
   },
