--- a/package.json
+++ b/package.json
@@ -12,17 +12,15 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "jest": "^27.4.3",
-    "mongoose": "^6.0.6",
-    "nodemon": "^2.0.12"
-  },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.13.0",
     "jsonwebtoken": "^8.5.1",
-    "supertest": "^6.1.6"
+    "supertest": "^6.1.6",
+    "jest": "^27.4.3",
+    "mongoose": "^6.0.6",
+    "nodemon": "^2.0.12"
   }
 }
